Fix image overflow

--- a/style.css
+++ b/style.css
@@ -43,4 +43,5 @@ img {
     margin-left: auto;
     margin-right: auto;
     display: block;
+    max-width:100%;
 }
